--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-prometheus-middleware",
-  "version": "1.2.0",
+  "version": "1.3.2",
   "description": "RED/USE metrics for express applications",
   "keywords": [
     "express",
@@ -12,8 +12,8 @@
   "files": [
     "src/"
   ],
-  "repository": "https://github.com/joao-fontenele/express-prometheus-middleware.git",
-  "author": "João Paulo Fontenele Brito <jpfb@icomp.ufam.edu.br>",
+  "repository": "https://github.com/fikrirnurhidayat/express-prometheus-middleware.git",
+  "author": "Fikri Rahmat Nurhidayat <fikrirnurhidayat@gmail.com>",
   "license": "MIT",
   "private": false,
   "scripts": {
@@ -21,26 +21,23 @@
     "release": "standard-version"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@ls-age/commitlint-circle": "^1.0.0",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "express": "4.x",
-    "husky": "^4.2.5",
-    "prom-client": ">= 10.x <= 13.x",
-    "standard-version": "^9.2.0"
+    "@commitlint/cli": "^7.6.1",
+    "@commitlint/config-conventional": "^8.3.6",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.27.5",
+    "express": "~4.18.2",
+    "husky": "^4.3.8",
+    "prom-client": "^12.0.0",
+    "standard-version": "^9.5.0"
   },
   "dependencies": {
+    "@ls-age/commitlint-circle": "^1.0.0",
     "response-time": "^2.3.2",
-    "url-value-parser": "^2.0.0"
+    "url-value-parser": "^2.2.0"
   },
   "peerDependencies": {
     "express": "4.x",
     "prom-client": ">= 10.x <= 13.x"
-  },
-  "optionalDependencies": {
-    "prometheus-gc-stats": "^0.6.2"
   }
 }
