--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-prometheus-exporter",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "RED/USE metrics for express applications",
   "keywords": [
     "express",
@@ -37,7 +37,6 @@
     "url-value-parser": "^2.2.0"
   },
   "peerDependencies": {
-    "express": "4.x",
-    "prom-client": ">= 10.x <= 13.x"
+    "express": "4.x"
   }
 }
